// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List write権限：あり マウント metaタグ 1`] = `
NodeList [
  <meta
    content="noindex"
    data-vmid="robots"
    data-vue-meta="2"
    name="robots"
  />,
]
`;

exports[`List write権限：あり マウント titleタグ 1`] = `"やそスポーツクラブ | 会場予約一覧"`;

exports[`List write権限：あり マウント データ取得：成功 ページ全体表示 1`] = `
<div>
  <h1>
    会場予約一覧
  </h1>
   
  <div
    class="card"
  >
    <header
      class="card-header"
    >
      <div
        class="header-buttons"
      >
        <button
          class="btn btn-filter-show btn-outline-info"
          type="button"
        >
          
          絞り込み
        
        </button>
         
        <button
          class="btn btn-bulk-show-header btn-outline-primary"
          type="button"
        >
          
          一括変更
        
        </button>
         
        <a
          class="btn btn-outline-primary"
          href="/reservation/schedule/add-list"
          target="_self"
        >
          
          練習予定追加
        
        </a>
      </div>
       
      <div
        class="form-filter mt-2"
        style="display: none;"
      >
        <div
          class="form-row form-group"
        >
          <label
            class="col-form-label col-sm-3"
            for="ymdFrom"
          >
            
    日付（開始）
  
          </label>
           
          <div
            class="col-sm-9"
          >
            <div
              class="my-input-wrapper"
            >
              <div
                class="d-flex"
              >
                <input
                  class="form-control flex-grow-1"
                  id="ymdFrom"
                  type="date"
                />
                 
                <button
                  class="btn"
                  type="button"
                >
                  <svg
                    class="c-icon"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="ci-primary"
                      d="M96,472a23.82,23.82,0,0,0,23.579,24H392.421A23.82,23.82,0,0,0,416,472V152H96Zm32-288H384V464H128Z"
                      fill="var(--ci-primary-color, currentColor)"
                    />
                    <rect
                      class="ci-primary"
                      fill="var(--ci-primary-color, currentColor)"
                      height="200"
                      width="32"
                      x="168"
                      y="216"
                    />
                    <rect
                      class="ci-primary"
                      fill="var(--ci-primary-color, currentColor)"
                      height="200"
                      width="32"
                      x="240"
                      y="216"
                    />
                    <rect
                      class="ci-primary"
                      fill="var(--ci-primary-color, currentColor)"
                      height="200"
                      width="32"
                      x="312"
                      y="216"
                    />
                    <path
                      class="ci-primary"
                      d="M328,88V40c0-13.458-9.488-24-21.6-24H205.6C193.488,16,184,26.542,184,40V88H64v32H448V88ZM216,48h80V88H216Z"
                      fill="var(--ci-primary-color, currentColor)"
                    />
                  </svg>
                </button>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="form-row form-group"
        >
          <label
            class="col-form-label col-sm-3"
            for="ymdTo"
          >
            
    日付（終了）
  
          </label>
           
          <div
            class="col-sm-9"
          >
            <div
              class="my-input-wrapper"
            >
              <div
                class="d-flex"
              >
                <input
                  class="form-control flex-grow-1"
                  id="ymdTo"
                  type="date"
                />
                 
                <button
                  class="btn"
                  type="button"
                >
                  <svg
                    class="c-icon"
                    role="img"
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="ci-primary"
                      d="M96,472a23.82,23.82,0,0,0,23.579,24H392.421A23.82,23.82,0,0,0,416,472V152H96Zm32-288H384V464H128Z"
                      fill="var(--ci-primary-color, currentColor)"
                    />
                    <rect
                      class="ci-primary"
                      fill="var(--ci-primary-color, currentColor)"
                      height="200"
                      width="32"
                      x="168"
                      y="216"
                    />
                    <rect
                      class="ci-primary"
                      fill="var(--ci-primary-color, currentColor)"
                      height="200"
                      width="32"
                      x="240"
                      y="216"
                    />
                    <rect
                      class="ci-primary"
                      fill="var(--ci-primary-color, currentColor)"
                      height="200"
                      width="32"
                      x="312"
                      y="216"
                    />
                    <path
                      class="ci-primary"
                      d="M328,88V40c0-13.458-9.488-24-21.6-24H205.6C193.488,16,184,26.542,184,40V88H64v32H448V88ZM216,48h80V88H216Z"
                      fill="var(--ci-primary-color, currentColor)"
                    />
                  </svg>
                </button>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <button
          class="btn btn-search btn-info"
          type="button"
        >
          
          検索
        
        </button>
         
        <hr />
         
        <div
          class="form-row form-group"
        >
          <label
            class="col-form-label col-sm-3"
            for=""
          >
            
    場所
  
          </label>
           
          <div
            class="col-sm-9"
          >
            <div
              class="my-input-wrapper"
            >
              <div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="placeIdList-1"
                    type="checkbox"
                    value="1"
                  />
                   
                  <label
                    class="form-check-label"
                    for="placeIdList-1"
                  >
                    
        体育館＠公民館別棟
      
                  </label>
                </div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="placeIdList-2"
                    type="checkbox"
                    value="2"
                  />
                   
                  <label
                    class="form-check-label"
                    for="placeIdList-2"
                  >
                    
        多目的ホール＠公民館1F
      
                  </label>
                </div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="placeIdList-3"
                    type="checkbox"
                    value="3"
                  />
                   
                  <label
                    class="form-check-label"
                    for="placeIdList-3"
                  >
                    
        大会議室＠公民館2F
      
                  </label>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="form-row form-group"
        >
          <label
            class="col-form-label col-sm-3"
            for=""
          >
            
    予約ステータス
  
          </label>
           
          <div
            class="col-sm-9"
          >
            <div
              class="my-input-wrapper"
            >
              <div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="reservationStatusIdList-1"
                    type="checkbox"
                    value="1"
                  />
                   
                  <label
                    class="form-check-label"
                    for="reservationStatusIdList-1"
                  >
                    
        未予約
      
                  </label>
                </div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="reservationStatusIdList-2"
                    type="checkbox"
                    value="2"
                  />
                   
                  <label
                    class="form-check-label"
                    for="reservationStatusIdList-2"
                  >
                    
        電話予約済
      
                  </label>
                </div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="reservationStatusIdList-3"
                    type="checkbox"
                    value="3"
                  />
                   
                  <label
                    class="form-check-label"
                    for="reservationStatusIdList-3"
                  >
                    
        書類提出済
      
                  </label>
                </div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="reservationStatusIdList-4"
                    type="checkbox"
                    value="4"
                  />
                   
                  <label
                    class="form-check-label"
                    for="reservationStatusIdList-4"
                  >
                    
        書類控取得
      
                  </label>
                </div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="reservationStatusIdList-5"
                    type="checkbox"
                    value="5"
                  />
                   
                  <label
                    class="form-check-label"
                    for="reservationStatusIdList-5"
                  >
                    
        料金支払済
      
                  </label>
                </div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="reservationStatusIdList-6"
                    type="checkbox"
                    value="6"
                  />
                   
                  <label
                    class="form-check-label"
                    for="reservationStatusIdList-6"
                  >
                    
        会計精算済
      
                  </label>
                </div>
                <div
                  class="form-check form-check-inline"
                >
                  <input
                    class="form-check-input"
                    id="reservationStatusIdList-7"
                    type="checkbox"
                    value="7"
                  />
                   
                  <label
                    class="form-check-label"
                    for="reservationStatusIdList-7"
                  >
                    
        キャンセル
      
                  </label>
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <button
          class="btn btn-filter-reset btn-secondary"
          type="button"
        >
          
          クリア
        
        </button>
         
        <button
          class="btn btn-filter-hide btn-outline-info"
          type="button"
        >
          
          非表示
        
        </button>
      </div>
    </header>
     
    <div
      class="card-body"
    >
      <div
        data-v-5f7284b9=""
      >
        <!---->
        <div
          class="position-relative table-responsive"
          data-v-5f7284b9=""
        >
          <table
            class="table text-nowrap"
            data-v-5f7284b9=""
          >
            <thead
              data-v-5f7284b9=""
            >
              <tr
                data-v-5f7284b9=""
              >
                <th
                  class=""
                  data-v-5f7284b9=""
                  style="vertical-align: middle; overflow: hidden;"
                >
                  <input
                    class="chk-all"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                  <!---->
                </th>
                <th
                  class=""
                  data-v-5f7284b9=""
                  style="vertical-align: middle; overflow: hidden;"
                >
                  <div
                    data-v-5f7284b9=""
                  >
                    日付
                  </div>
                  <!---->
                </th>
                <th
                  class=""
                  data-v-5f7284b9=""
                  style="vertical-align: middle; overflow: hidden;"
                >
                  <div
                    data-v-5f7284b9=""
                  >
                    時間
                  </div>
                  <!---->
                </th>
                <th
                  class=""
                  data-v-5f7284b9=""
                  style="vertical-align: middle; overflow: hidden;"
                >
                  <div
                    data-v-5f7284b9=""
                  >
                    場所
                  </div>
                  <!---->
                </th>
                <th
                  class=""
                  data-v-5f7284b9=""
                  style="vertical-align: middle; overflow: hidden;"
                >
                  <div
                    data-v-5f7284b9=""
                  >
                    予約ステータス
                  </div>
                  <!---->
                </th>
                <th
                  class=""
                  data-v-5f7284b9=""
                  style="vertical-align: middle; overflow: hidden;"
                >
                  <div
                    data-v-5f7284b9=""
                  >
                    
                  </div>
                  <!---->
                </th>
              </tr>
              <!---->
            </thead>
            <tbody
              class="position-relative"
              data-v-5f7284b9=""
            >
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-74"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/05
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/65"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/74"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-73"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/05
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            多目的ホール＠公民館1F
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/64"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/73"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-75"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/05
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/66"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/75"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-77"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/06
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            キャンセル
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/68"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/77"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-76"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/06
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/67"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/76"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-78"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/06
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            大会議室＠公民館2F
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/69"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/78"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-80"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/07
  
                    <span
                      class=""
                    >
                      
    (月)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/70"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/80"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-79"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/07
  
                    <span
                      class=""
                    >
                      
    (月)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/70"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/79"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-82"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/12
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/72"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/82"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-81"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/12
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            多目的ホール＠公民館1F
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/71"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/81"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-83"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/12
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/73"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/83"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-85"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/13
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            キャンセル
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/75"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/85"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-84"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/13
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/74"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/84"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-86"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/13
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            大会議室＠公民館2F
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/76"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/86"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-88"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/14
  
                    <span
                      class=""
                    >
                      
    (月)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/77"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/88"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-87"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/14
  
                    <span
                      class=""
                    >
                      
    (月)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/77"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/87"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-90"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/19
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/79"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/90"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-89"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/19
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            多目的ホール＠公民館1F
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/78"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/89"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-91"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/19
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/80"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/91"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-93"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/20
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            キャンセル
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/82"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/93"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-92"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/20
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/81"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/92"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-94"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/20
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            大会議室＠公民館2F
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/83"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/94"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-96"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/21
  
                    <span
                      class=""
                    >
                      
    (月)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/84"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/96"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-95"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/21
  
                    <span
                      class=""
                    >
                      
    (月)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/84"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/95"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-98"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/26
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/86"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/98"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-97"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/26
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            多目的ホール＠公民館1F
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/85"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/97"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-99"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/26
  
                    <span
                      class="text-primary"
                    >
                      
    (土)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/87"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/99"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-101"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/27
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            キャンセル
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/89"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/101"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-100"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/27
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/88"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/100"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-102"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/27
  
                    <span
                      class="text-danger"
                    >
                      
    (日)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            大会議室＠公民館2F
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/90"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/102"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-104"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/28
  
                    <span
                      class=""
                    >
                      
    (月)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            10:00 - 13:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            書類控取得
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/91"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/104"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <tr
                data-v-5f7284b9=""
              >
                <td
                  data-v-5f7284b9=""
                >
                  <input
                    class="chk-103"
                    data-v-5f7284b9=""
                    type="checkbox"
                  />
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  <span
                    data-v-5f7284b9=""
                  >
                    
  2020/12/28
  
                    <span
                      class=""
                    >
                      
    (月)
  
                    </span>
                  </span>
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            13:00 - 16:00
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            体育館＠公民館別棟
          
                </td>
                <td
                  data-v-5f7284b9=""
                >
                  
            電話予約済
          
                </td>
                <td
                  class="my-action"
                  data-v-5f7284b9=""
                >
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/schedule/edit/91"
                    target="_self"
                  >
                    
              編集
            
                  </a>
                   
                  <a
                    class="btn btn-outline-primary"
                    data-v-5f7284b9=""
                    href="/reservation/reservation/split/103"
                    target="_self"
                  >
                    
              分割
            
                  </a>
                </td>
              </tr>
              <!---->
              <!---->
            </tbody>
            <!---->
          </table>
          <!---->
        </div>
        <!---->
      </div>
    </div>
     
    <footer
      class="card-footer"
    >
      <div
        class="footer-buttons"
      >
        <button
          class="btn btn-bulk-show-footer btn-outline-primary"
          type="button"
        >
          
          一括変更
        
        </button>
         
        <a
          class="btn btn-outline-primary"
          href="/reservation/schedule/add-list"
          target="_self"
        >
          
          練習予定追加
        
        </a>
      </div>
    </footer>
  </div>
   
  <div
    class="list-modal-bulk-stub"
  />
</div>
`;

exports[`List write権限：なし マウント フッターボタン表示 1`] = `
<div
  class="footer-buttons"
>
  <!---->
   
  <!---->
</div>
`;

exports[`List write権限：なし マウント ヘッダーボタン表示 1`] = `
<div
  class="header-buttons"
>
  <button
    class="btn btn-filter-show btn-outline-info"
    type="button"
  >
    
          絞り込み
        
  </button>
   
  <!---->
   
  <!---->
</div>
`;

exports[`List write権限：なし マウント 一覧アクション表示 1`] = `
<td
  class="my-action"
  data-v-5f7284b9=""
>
  <!---->
   
  <!---->
</td>
`;
